--- a/Kubernetes/service.yml
+++ b/Kubernetes/service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: netflix-app
+  name: my-demo-app
   labels:
-    app: netflix-app
+    app: my-demo-app
 spec:
   type: NodePort
   ports:
@@ -11,4 +11,4 @@ spec:
     targetPort: 80
     nodePort: 30007
   selector:
-    app: netflix-app
+    app: my-demo-app
