--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: netflix-app
+  name: my-demo-app
   labels:
-    app: netflix-app
+    app: my-demo-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: netflix-app
+      app: my-demo-app
   template:
     metadata:
       labels:
-        app: netflix-app
+        app: my-demo-app
     spec:
       containers:
-      - name: netflix-app
-        image: nasi101/netflix:latest
+      - name: my-demo-app
+        image: danielbui12demo/my-demo-app
         ports:
         - containerPort: 80
